home.css
#main
{
    display: flex;
    flex-wrap: wrap;
}

.tile
{
    width: 30%;
    min-width: 300px;
    margin: 10px;
}

.img
{
    overflow: hidden;
    height: 300px;
    width: 300px;
    display: flex;
    background-image: url("images/zambia/0.jpg");
    background-position: center;
    background-size: cover;
}


.tile > h1 
{
    margin-bottom: 0px;
}

